# dolphindes

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  dolphindes.yml  pyproject.toml
.github/workflows/: daily_checks.yml  quality.yml  tests.yml
docs/: conf.py  cvxopt.rst  geometry.rst  index.rst  maxwell.rst  modules.rst  photonics.rst  tutorials.rst  util.rst
docs/examples/limits/: LDOS.ipynb  LDOS.py  LDOS_gcd.ipynb  planewave_absorption.ipynb
docs/examples/solvers/: custom_maxwell_solver.ipynb  polar_FDFD_rotational_symmetry.ipynb
docs/examples/verlan/: LDOS_verlan_part1.ipynb
dolphindes/: __init__.py  types.py
dolphindes/cvxopt/: __init__.py  _base_qcqp.py  dual.py  gcd.py  optimization.py  qcqp.py
dolphindes/geometry/: __init__.py  geometry.py
dolphindes/maxwell/: __init__.py  maxwell.py  maxwell_fdfd.py  maxwell_polar_fdfd.py
dolphindes/photonics/: __init__.py  _base_photonics.py  photonics.py
dolphindes/util/: __init__.py  class_utils.py  geometry_utils.py  math_utils.py  projectors.py
examples/: custom_maxwell_solver.ipynb  dolphindes_planewave_absorption.ipynb
examples/limits/: LDOS.ipynb  LDOS.py  LDOS_gcd.ipynb  LDOS_gcd.py  LDOS_polar.ipynb  planewave_absorption.ipynb
examples/solvers/: polar_FDFD_inner_pml.ipynb  polar_FDFD_mirror_symmetry.ipynb
examples/verlan/: LDOS_verlan.ipynb
examples/verlan/reference_arrays/: chi_inferred.npy  parameters.pkl  verlan_des_mask.npy
tests/: test_fdfd.py  test_maxwell.py  test_optimization.py  test_photonics.py  test_polar_fdfd.py  test_polar_photonics.py  test_qcqp.py  test_utils.py
tests/reference_arrays/qcqp_example/global/: ldos_dualval.npy  ldos_dualval_penalty.npy  ldos_grad_penalty.npy  ldos_optgrad.npy  ldos_opthess.npy  ldos_penalty_sample_v.npy  ldos_some_projections.npy  ldos_sparse_A2.npz  ldos_sparse_lags.npy  ldos_sparse_lags_optimal.npy  ldos_sparse_lags_optimal_newton.npy  ldos_sparse_totalA.npz  ldos_sparse_total_s.npy
tests/reference_arrays/qcqp_example/local/: ldos_dualconst.npy  ldos_dualval.npy  ldos_dualval_penalty.npy  ldos_grad_penalty.npy  ldos_optgrad.npy  ldos_opthess.npy  ldos_penalty_sample_v.npy  ldos_sparse_A0.npz  ldos_sparse_A1.npz  ldos_sparse_lags.npy  ldos_sparse_lags_optimal.npy  (+4 more)
(+32 files in other folders)
